python-apt (0.7.11) UNRELEASED; urgency=low

  * Support the 'in' operator (e.g. "k in d") in Configuration{,Ptr,Sub}
    objects (e.g. apt_pkg.Config) and in TagSections (apt_pkg.ParseSection())
  * Replace support for file objects with a more generic support for any object
    providing a fileno() method and for file descriptors (integers).
  * Add support for the Breaks fields

 -- Julian Andres Klode <jak@debian.org>  Mon, 13 Apr 2009 18:08:10 +0200

python-apt (0.7.10.3) unstable; urgency=low

  * apt/package.py: Handle cases where no candidate is available, by returning
    None in the candidate property. (Closes: #523801)

 -- Julian Andres Klode <jak@debian.org>  Sun, 12 Apr 2009 19:50:26 +0200

python-apt (0.7.10.2) unstable; urgency=low

  * apt/package.py: Handle cases where no candidate is available and
    one of the deprecated properties (e.g. candidateVersion) is
    requested. (Closes: #523801)
  * setup.py, debian/rules: Support version in setup.py again by getting
    the value from the variable DEBVER (defined in debian/rules), falling
    back to None.

 -- Julian Andres Klode <jak@debian.org>  Sun, 12 Apr 2009 19:00:07 +0200

python-apt (0.7.10.1) unstable; urgency=low

  * Fix FTBFS with python-debian (>= 0.1.13) on Python 2.4 by not using it to
    get a version number in setup.py (Closes: #523473)
  * apt/package.py:
    - (Package.candidateRecord): Fix missing 'd' in 'record'
    - (DeprecatedProperty.__get__): Only warn when used on objects, this
      makes it easier to use e.g. pydoc,sphinx,pychecker.

 -- Julian Andres Klode <jak@debian.org>  Fri, 10 Apr 2009 17:51:07 +0200

python-apt (0.7.10) unstable; urgency=low

  * Build-Depend on python-debian, use it to get version number from changelog
  * Depend on libjs-jquery, and remove internal copy (Closes: #521532)
  * apt/package.py:
    - Introduce Version.{uri,uris,fetch_binary()}
  * debian/control:
    - Remove mdz from Uploaders (Closes: #521477), add myself.