@@ -5,8 +5,10 @@ python-apt (0.7.11) UNRELEASED; urgency=low
   * Replace support for file objects with a more generic support for any object
     providing a fileno() method and for file descriptors (integers).
   * Add support for the Breaks fields
+  * Only create Package objects when they are requested, do not keep them in
+    a dict. Saves 10MB for 25,000 packages on my machine.
 
- -- Julian Andres Klode <jak@debian.org>  Mon, 13 Apr 2009 18:08:10 +0200
+ -- Julian Andres Klode <jak@debian.org>  Wed, 15 Apr 2009 13:47:42 +0200
 
 python-apt (0.7.10.3) unstable; urgency=low
 
